Fixed icons on dark mode

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,7 +1,7 @@
 .custom-phone {
-    background-color: var(--grey);
+    background-color: gold;
     border-radius: 10px;
     padding: 5px;
-    color: gold;
+    color: var(--grey);
     transform: translate(-7px, -3px);
 }
