--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -23,8 +23,8 @@
 }
 /* LOGO */
 .logo {
-  width: 220px;
-  height: 110px;
+  width: 200px;
+  height: 90px;
 }
 .logo-img {
   width: 150px;
