--- a/src/css/service.css
+++ b/src/css/service.css
@@ -8,10 +8,10 @@
     margin-right: -25px;
 }
 .custom-wrench {
-  background-color: var(--grey);
+  background-color: gold;
   border-radius: 10px;
   padding: 5px;
-  color: gold;
+  color: var(--grey);
   transform: translate(-7px, -3px);
 }
 .card {
@@ -30,6 +30,8 @@
 .head-service {
   font-size: 1rem;
   background-color: var(--grey);
+  line-height: 1.5;
+  white-space: pre-wrap;
 }
 .head-service span {
   color: gold;
@@ -42,8 +44,8 @@
   list-style-type: none;
 }
 .custom-bullet {
-  background-color: var(--grey);
-  color: green;
+  background-color: green;
+  color: white;
   border-radius: 5px;
   transform: translate(-8px, -1px);
 }
@@ -80,5 +82,16 @@
 .custom-alert2 {
   width: 100%;
   font-weight: 800;
+}
+.service-images {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 20px;
+  border: none; 
+  background-color: var(--grey)
+}
+.supertext {
+  margin-bottom: 50px;
+  font-size: 1.3rem;
 }
 /* END OF SERVICE */
